--- a/index.html
+++ b/index.html
@@ -7,10 +7,12 @@
     <link rel="stylesheet" href="css/styles.css" />
   </head>
   <body>
+    <h1 id="head-logo">Jump Game</h1>
     <div class="game">
       <div id="character"></div>
       <div id="object"></div>
     </div>
+ 
     <script src="js/jump-brick.js"></script>
   </body>
 </html>
