--- a/index.html
+++ b/index.html
@@ -14,6 +14,6 @@
     </div>
  
     <script src="js/jump-brick.js"></script>
-    <h2>Press space button to jump</h2>
+    <h2 class="mytext">Press space button to jump</h2>
   </body>
 </html>
